--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   firebase_auth: 5.4.1
   flutter_bloc: ^8.1.0
   equatable: ^2.0.5
+  mqtt_client: ^9.6.1
+  http: 1.3.0
 
 dev_dependencies:
   flutter_test:
