--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: 5.4.1
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  intl: ^0.17.0
   mqtt_client: ^9.6.1
   http: 1.3.0
 
